tests/error/redeclaring_variable_as_typedef.c
// fail "Redeclaration."

int a;
typedef int a;

int main(){
    
}
